# sqlpp

./: .gitattributes  .gitignore  .ocamlformat  Makefile  README.md  dune  dune-project  sqlpp.opam  sqlpp_manage.ml  sqlpp_manage.mli  sqlpp_mariadb.ml  sqlpp_mariadb.mli  sqlpp_mariadb.opam  sqlpp_postgresql.ml  sqlpp_postgresql.mli  sqlpp_postgresql.opam  sqlpp_ppx.ml  sqlpp_ppx.mli  sqlpp_sqlite.ml  sqlpp_sqlite.mli  sqlpp_sqlite.opam  sqlpp_sqlite_manage.ml  sqlpp_std.ml
.github/workflows/: main.yml
example/: dune  main  main.ml  test.t
sqlpp/: analyze.ml  analyze.mli  ddl.ml  dune  lexer.ml  parser.mly  printer.ml  report.ml  scope.ml  sqlpp.ml  syntax.ml  syntax.mli
test/: compose.t  delete.t  dune  fieldset.t  group_by.t  infer.t  insert.t  nested.t  test.ml  test_ppx.ml  update.t  with-scope.t
test/sqlpp/: delete.t  dune  expr-exists.t  expr-in.t  fieldset.t  insert.t  optional_fields.t  schema.sql  select-limit-offset.t  test.ml  test_ppx  test_ppx.ml  update.t
test/sqlpp_mariadb/: dune  main.ml  schema.sql  sqlpp_mariadb.t  test.t
test/sqlpp_mariadb.t/: run.t
test/sqlpp_postgresql/: dune  main.ml  schema.sql  test.t
test/sqlpp_sqlite/: db.ml  dune  dune-project  main.ml  test.t
