(library
 (name sqlpp_std)
 (public_name sqlpp.std)
 (modules sqlpp_std)
 (libraries containers ppx_hash.runtime-lib))

(library
 (name sqlpp_sqlite)
 (public_name sqlpp_sqlite)
 (modules sqlpp_sqlite)
 (kind ppx_rewriter)
 (flags -open Sqlpp_std)
 (libraries unix pprint sqlpp sqlpp.std sqlpp.ppx sqlite3))

(library
 (name sqlpp_mariadb)
 (public_name sqlpp_mariadb)
 (modules sqlpp_mariadb)
 (kind ppx_rewriter)
 (flags -open Sqlpp_std)
 (libraries unix pprint sqlpp sqlpp.std sqlpp.ppx lwt lwt.unix mariadb))

(library
 (name sqlpp_postgresql)
 (public_name sqlpp_postgresql)
 (modules sqlpp_postgresql)
 (kind ppx_rewriter)
 (flags -open Sqlpp_std)
 (libraries unix pprint sqlpp sqlpp.std sqlpp.ppx lwt lwt.unix postgresql))

(library
 (name sqlpp_manage)
 (public_name sqlpp.manage)
 (modules sqlpp_manage)
 (flags -open Sqlpp_std)
 (libraries cmdliner sqlpp sqlpp.std))

(library
 (name sqlpp_sqlite_manage)
 (public_name sqlpp_sqlite.manage)
 (modules sqlpp_sqlite_manage)
 (flags -open Sqlpp_std)
 (libraries cmdliner sqlpp sqlpp.std sqlpp_sqlite sqlpp.manage)
 (preprocess
  (pps sqlpp_sqlite)))

(library
 (name sqlpp_ppx)
 (public_name sqlpp.ppx)
 (modules sqlpp_ppx)
 (flags -open Sqlpp_std)
 (preprocess
  (pps ppxlib.metaquot))
 (libraries ppxlib sqlpp sqlpp.std))
