(executable
 (name test_ppx)
 (modules test_ppx)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  (file schema.sql))
 (libraries ppxlib sqlpp.ppx sqlpp_sqlite))

(executable
 (name test)
 (modules test)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  (file schema.sql))
 (libraries ppxlib sqlpp.manage sqlpp_sqlite))

(cram
 (applies_to * \ sqlpp_mariadb)
 (deps ./test_ppx ./test_ppx.exe ./test.exe ./schema.sql))

(cram
 (alias test_sqlpp_mariadb)
 (runtest_alias false)
 (applies_to sqlpp_mariadb))
