(executable
 (name test_ppx)
 (modules test_ppx)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  (file schema.sql))
 (libraries ppxlib sqlpp.ppx sqlpp_sqlite))

(executable
 (name test)
 (modules test)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  (file schema.sql))
 (libraries ppxlib sqlpp.manage sqlpp_sqlite sqlpp_sqlite.manage))

(cram
 (deps ./test_ppx ./test_ppx.exe ./test.exe ./schema.sql))
